--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,8 +57,7 @@ dependencies {
     //UI
     implementation "com.github.bumptech.glide:glide:4.12.0"
     implementation "androidx.test.espresso:espresso-idling-resource:3.4.0"
-    implementation 'com.github.corouteam:GlideToVectorYou:v2.0.0'
-    implementation 'com.faltenreich:skeletonlayout:4.0.0'
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
