:sparkles: :art: Add Hadith Collection and fix UI hadith books

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HadithApp">
         <activity
+            android:name=".ui.screen.hadithcollection.HadithCollectionActivity"
+            android:exported="true" />
+        <activity
             android:name=".ui.screen.hadithbooks.HadithBooksActivity"
             android:exported="true" />
         <activity
